Tiny fixes: deleteNut() edge case + confirmation, disabling history, fix query bar shortcuts, make mod key tooltip visible

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -573,6 +573,7 @@ form {
             font-size: 90%;
             font-weight: normal;
             line-height: 100%;
+            width: 250px;
           }
           .shortcut-modkey {
             text-align: right;
@@ -584,6 +585,8 @@ form {
             .tooltip:after {
               text-align: left;
               width: 300px;
+              bottom: -100px;
+              left: 25px;
             }
           }
         }
